@@ -11,7 +11,9 @@ package org.andor.core.android;
 import javax.microedition.khronos.egl.EGLConfig;
 import javax.microedition.khronos.opengles.GL10;
 
+import org.andor.core.Colour;
 import org.andor.core.Settings;
+import org.andor.core.render.RenderPasses;
 import org.andor.utils.FontUtils;
 
 import android.opengl.GLES20;
@@ -34,7 +36,9 @@ public class AndroidDisplayRenderer implements GLSurfaceView.Renderer {
 		Settings.Window.Width = this.display.getWidth();
 		Settings.Window.Height = this.display.getHeight();
 		//Load the default font
-		Settings.Engine.DefaultFont = FontUtils.loadBitmapFont("resources/andor/defaultfont.png", 12);
+		Settings.Engine.DefaultFont = FontUtils.createBitmapFont(Settings.Resources.FONT_DEFAULT, false, Colour.WHITE, 16);
+		//Setup the render passes
+		RenderPasses.setupPasses();
 		//Create the game
 		this.display.activity.game.create();
 		//Start the game
